refactor: refatora as classes controller e controller test aplicando o DRY - Don't Repeat Yourself